Create html template

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="containet">
+
+        </div>
+    </nav>
+
+    <header class="header">
+        <div class="containet">
+
+        </div>
+    </header>
+
+    <section class="section">
+        <div class="containet">
+
+        </div>
+        <div class="containet">
+
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="containet">
+
+        </div>
+    </footer>
 </body>
 </html>
