Chnage html structure

--- a/index.html
+++ b/index.html
@@ -7,29 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="containet">
-
-        </div>
-    </nav>
-
     <header class="header">
-        <div class="containet">
+        <div class="container">
+            
+        </div>
+
+        <div class="container">
 
         </div>
     </header>
 
     <section class="section">
-        <div class="containet">
+        <div class="container">
 
         </div>
-        <div class="containet">
+        
+        <div class="container">
 
         </div>
     </section>
 
     <footer class="footer">
-        <div class="containet">
+        <div class="container">
 
         </div>
     </footer>
