--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
     <header class="header">
         <div class="container">
-            
+            <div>Header Logo</div>
+            <div class="container">
+                <ul class="container no-bullets">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
         </div>
 
         <div class="container">
