--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div>Header Logo</div>
             <div class="container">
                 <ul class="container no-bullets">
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
                 </ul>
             </div>
         </div>
