Finish basic structure of header
Deleted navbar and added logo and links to the header.
Added hero section content.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="flex-container">
             <div>Header Logo</div>
-            <div class="container">
-                <ul class="container no-bullets">
+            <div class="flex-container">
+                <ul class="flex-container no-bullets">
                     <li><a href="#">header link one</a></li>
                     <li><a href="#">header link two</a></li>
                     <li><a href="#">header link three</a></li>
@@ -19,23 +19,31 @@
             </div>
         </div>
 
-        <div class="container">
-
+        <div class="flex-container">
+            <div>
+                <h1>This website is awesome</h1>
+                <p>
+                    This website has some subtext that goes here under the main title. 
+                    It's smaller font and the color is lower contrast
+                </p>
+                <button>Sign up</button>
+            </div>
+            <img src="" alt="this is a placeholder for an image">
         </div>
     </header>
 
     <section class="section">
-        <div class="container">
+        <div class="flex-container">
 
         </div>
         
-        <div class="container">
+        <div class="flex-container">
 
         </div>
     </section>
 
     <footer class="footer">
-        <div class="container">
+        <div class="flex-container">
 
         </div>
     </footer>
