Add basic CSS to header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="flex-container">
-            <div>Header Logo</div>
+            <div class="logo">Header Logo</div>
             <div class="flex-container">
                 <ul class="flex-container no-bullets">
                     <li><a href="#">header link one</a></li>
