Style the header (nnavbar and hero)
Used the code from Flexbox Crash Course.

--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
 </head>
 <body>
     <header class="header">
-        <div class="flex-container">
+        <div class="flex-container navbar">
             <div class="logo">Header Logo</div>
-            <div class="flex-container">
-                <ul class="flex-container no-bullets">
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
-                </ul>
-            </div>
+            <ul class="no-bullets">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
         </div>
 
-        <div class="flex-container">
+        <div class="flex-container hero">
             <div>
                 <h1>This website is awesome</h1>
                 <p>
@@ -28,7 +26,7 @@
                 </p>
                 <button>Sign up</button>
             </div>
-            <img src="" alt="this is a placeholder for an image">
+            <div><img src="" alt="this is a placeholder for an image" class="placeholder"></div>
         </div>
     </header>
 
