Make template for quote section

--- a/index.html
+++ b/index.html
@@ -31,12 +31,35 @@
     </header>
 
     <section class="section">
-        <div class="flex-container">
-
+        <h1 style="text-align: center;">Some random information</h1>
+        <div class="flex-container information">
+            <div>
+                <img src="" alt="" class="card">
+                <p>This is some subtext under illustration image</p>
+            </div>
+            <div>
+                <img src="" alt="" class="card">
+                <p>This is some subtext under illustration image</p>
+            </div>
+            <div>
+                <img src="" alt="" class="card">
+                <p>This is some subtext under illustration image</p>
+            </div>
+            <div>
+                <img src="" alt="" class="card">
+                <p>This is some subtext under illustration image</p>
+            </div>
         </div>
         
-        <div class="flex-container">
-
+        <div class="flex-container quote">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Nihil impedit provident voluptate eos laudantium. Commodi officiis beatae fugiat dolor et. 
+                Nemo nesciunt adipisci impedit sed delectus eveniet vero unde. Aut?
+            </p>
+            <p>
+                Author of the quote
+            </p>
         </div>
     </section>
 
