Make action template in section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
                 Author of the quote
             </p>
         </div>
+
+        <div class="flex-container">
+            <div class="flex-container action">
+                <div>
+                    <h4>Call to action! It's time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
