--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <footer class="footer">
         <div class="flex-container">
-
+            Copyright #copy The Odin Project 2024
         </div>
     </footer>
 </body>
