--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <h1 style="text-align: center;">Some random information</h1>
         <div class="flex-container information">
             <div>
-                <img src="" alt="" class="card">
+                <div class="card"></div>
                 <p>This is some subtext under illustration image</p>
             </div>
             <div>
-                <img src="" alt="" class="card">
+                <div class="card"></div>
                 <p>This is some subtext under illustration image</p>
             </div>
             <div>
-                <img src="" alt="" class="card">
+                <div class="card"></div>
                 <p>This is some subtext under illustration image</p>
             </div>
             <div>
-                <img src="" alt="" class="card">
+                <div class="card"></div>
                 <p>This is some subtext under illustration image</p>
             </div>
         </div>
