--- a/index.html
+++ b/index.html
@@ -31,23 +31,25 @@
     </header>
 
     <section class="section">
-        <h1 style="text-align: center;">Some random information</h1>
         <div class="flex-container information">
-            <div>
-                <div class="card"></div>
-                <p>This is some subtext under illustration image</p>
-            </div>
-            <div>
-                <div class="card"></div>
-                <p>This is some subtext under illustration image</p>
-            </div>
-            <div>
-                <div class="card"></div>
-                <p>This is some subtext under illustration image</p>
-            </div>
-            <div>
-                <div class="card"></div>
-                <p>This is some subtext under illustration image</p>
+            <h1 class="header-text">Some random information.</h1>
+            <div class="flex-container cards">
+                <div>
+                    <div class="card"></div>
+                    <p>This is some subtext under illustration image</p>
+                </div>
+                <div>
+                    <div class="card"></div>
+                    <p>This is some subtext under illustration image</p>
+                </div>
+                <div>
+                    <div class="card"></div>
+                    <p>This is some subtext under illustration image</p>
+                </div>
+                <div>
+                    <div class="card"></div>
+                    <p>This is some subtext under illustration image</p>
+                </div>
             </div>
         </div>
         
