--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="flex-container">
+    <footer class="footer flex-container">
+        <div>   <!-- to make full like header: <div class="flex-container">, and no flex-container in footer -->
             Copyright #copy The Odin Project 2024
         </div>
     </footer>
