Make changes to quote and footer

--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
             </div>
         </div>
         
-        <div class="flex-container quote">
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Nihil impedit provident voluptate eos laudantium. Commodi officiis beatae fugiat dolor et. 
-                Nemo nesciunt adipisci impedit sed delectus eveniet vero unde. Aut?
-            </p>
-            <p>
-                Author of the quote
-            </p>
+        <div class="quote">
+            <div class="flex-container">
+                <p class="italic-quote">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Nihil impedit provident voluptate eos laudantium. Commodi officiis beatae fugiat dolor et. 
+                    Nemo nesciunt adipisci impedit sed delectus eveniet vero unde. Aut?
+                </p>
+                <p>
+                    Author of the quote
+                </p>
+            </div>
         </div>
 
         <div class="flex-container action">
@@ -75,9 +77,11 @@
         </div>
     </section>
 
-    <footer class="footer flex-container">
-        <div>   <!-- to make full like header: <div class="flex-container">, and no flex-container in footer -->
-            Copyright #copy The Odin Project 2024
+    <footer class="footer">
+        <div class="flex-container">
+            <div>   <!-- to make full like header: <div class="flex-container">, and no flex-container in footer -->
+                Copyright #copy The Odin Project 2024
+            </div>
         </div>
     </footer>
 </body>
