--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="quote">
-            <div class="flex-container">
+            <div class="quote flex-container">
                 <p class="italic-quote">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Nihil impedit provident voluptate eos laudantium. Commodi officiis beatae fugiat dolor et. 
@@ -67,7 +67,7 @@
         </div>
 
         <div class="flex-container action">
-            <div class="flex-container">
+            <div class="flex-container action-box">
                 <div>
                     <h4>Call to action! It's time!</h4>
                     <p>Sign up for our product by clicking that button right over there!</p>
