Add stand-size class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </div>
 
-        <div class="flex-container hero">
+        <div class="flex-container hero stand-size">
             <div>
                 <h1>This website is awesome</h1>
                 <p>
@@ -31,7 +31,7 @@
     </header>
 
     <section class="section">
-        <div class="flex-container information">
+        <div class="flex-container information stand-size">
             <h1 class="header-text">Some random information.</h1>
             <div class="flex-container cards">
                 <div>
@@ -53,8 +53,8 @@
             </div>
         </div>
 
-        <div class="quote">
-            <div class="quote flex-container">
+        <div class="quote stand-size">
+            <div class="flex-container">
                 <p class="italic-quote">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Nihil impedit provident voluptate eos laudantium. Commodi officiis beatae fugiat dolor et. 
@@ -66,8 +66,8 @@
             </div>
         </div>
 
-        <div class="flex-container action">
-            <div class="flex-container action-box">
+        <div class="flex-container stand-size">
+            <div class="flex-container action">
                 <div>
                     <h4>Call to action! It's time!</h4>
                     <p>Sign up for our product by clicking that button right over there!</p>
