Center quote and right author

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
             </div>
         </div>
 
-        <div class="quote stand-size">
+        <div class="quote stand-size">  <!-- if you add flex-container, it is centered, but there is white space on the sides, background-color is not full -->
             <div class="flex-container">
                 <p class="italic-quote">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Nihil impedit provident voluptate eos laudantium. Commodi officiis beatae fugiat dolor et. 
                     Nemo nesciunt adipisci impedit sed delectus eveniet vero unde. Aut?
                 </p>
-                <p>
+                <p class="author">
                     Author of the quote
                 </p>
             </div>
