--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     Nemo nesciunt adipisci impedit sed delectus eveniet vero unde. Aut?
                 </p>
                 <p class="author">
-                    Author of the quote
+                    - Author of the quote
                 </p>
             </div>
         </div>
@@ -80,7 +80,7 @@
     <footer class="footer">
         <div class="flex-container">
             <div>   <!-- to make full like header: <div class="flex-container">, and no flex-container in footer -->
-                Copyright #copy The Odin Project 2024
+                Copyright &copy The Odin Project 2024
             </div>
         </div>
     </footer>
